[metadata]
# replace with your username:
name = s3-sysbackup
version = attr: s3_sysbackup.version.__version__
author = Richard T. Weeks
author_email = rtweeks21@gmail.com
description = A flexible, Unix-philosophy backup utility saving to AWS S3 WORM storage
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/rtweeks/s3-sysbackup
project_urls =
    Bug Tracker = https://github.com/rtweeks/s3-sysbackup/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Topic :: System :: Archiving :: Backup

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    boto3
    ansicolors ~=1.1
    asn1crypto ~=1.4
    password-strength ~=0.0.3
    pycryptodome ~=3.10

[options.packages.find]
where = src

[options.package_data]
s3_sysbackup = 
  cf_templates/*.yml
  systemd_templates/archive.*

[options.entry_points]
console_scripts =
  s3-sysbackup = s3_sysbackup.program:main
